--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,10 @@
     <title>Vite App</title>
 </head>
 <body>
-     <canvas id="root"></canvas>
+    <canvas id="root"></canvas>
+     <div id="container">
+        <h1 id="title">THEE GARTIANS</h1>
+    </div>
     <script type="module" src="/index.js"></script>
 </body>
 </html>
