--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./style.css">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css">
     <title>Vite App</title>
 </head>
 <body>
-    <canvas id="root"></canvas>
-     <div id="container">
-        <h1 id="title">THEE GARTIANS</h1>
-    </div>
+    <canvas id="root" class="bg-gradient-to-br from-purple-500 to-pink-500"></canvas>
     <script type="module" src="/index.js"></script>
 </body>
 </html>
