--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,25 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="rocket.png">
     <link rel="stylesheet" href="./style.css">
     <title>Thee Gartians</title>
 </head>
 <body>
     <div id="error"></div>
     <canvas id="root" class="absolute bg-gradient-to-br from-purple-500 to-pink-500"></canvas>
-    <div class="absolute flex flex-col justify-center items-center h-5/6 lg:h-full">
-        <img id="logo" class="scale-[0.0] opacity-0 lg:w-1/2" src="logo.png">
+    <div id="hero" class="absolute flex flex-col justify-center items-center font-semibold scale-[0.0] opacity-0 h-full">
+        <img class="lg:w-1/2" src="logo.png">
+        <div class="flex mt-4">
+            <div class="h-6 flex mr-4">
+                <img class="h-full mr-1" src="twitch_icon.svg">
+                <a href="https://www.twitch.tv/theegartians">Twitch</a>
+            </div>
+            <div class="h-6 flex">
+                <img class="h-full mr-1" src="insta_icon.svg">
+                <a href="https://instagram.com/theegartians">Instagram</a>
+            </div>
+        </div>
     </div>
     <script type="module" src="/index.js"></script>
 </body>
