Uncommented email UI.

--- a/src/index.html
+++ b/src/index.html
@@ -27,12 +27,12 @@
             </div>
 
 	    <!-- Mailing List -->
-	    <!--<div class="h-6 flex">
+	    <div class="h-6 flex">
 		<img class="h-full mr-1" src="email.svg">
 		<button onclick="displayMailingList()">Mailing List</button>
-	    </div>-->
+	    </div>
 	</div>
-        <!--<input type="text" id="mailingList" name="email" placeholder="theegartians@gmail.com" style="opacity: 0; margin-top: 10px; padding-left: 10px; transition: opacity 1s ease-in-out; border-radius: 20px;">-->
+        <input type="text" id="mailingList" name="email" placeholder="theegartians@gmail.com" style="opacity: 0; margin-top: 10px; padding-left: 10px; transition: opacity 1s ease-in-out; border-radius: 20px;">
     </div>
     <script type="module" src="/index.js"></script>
 </body>
