Added address and success message.

--- a/src/success.html
+++ b/src/success.html
@@ -9,8 +9,14 @@
 <body id="body" class="overflow-visble text-[#EEC863] opacity-0 bg-black" style="font-family: Basement">
     <canvas id="root" class="fixed bg-black" style="z-index: -1;"></canvas>
 
-    <div class="flex h-[85vh] justify-center items-center">
-        <h1 class="text-3xl">YOU'RE GOING!</h1>
+    <div class="fixed pl-4 pt-4 underline">
+        <a href="./">Home</a>
+    </div>
+
+    <div class="flex flex-col h-[85vh] justify-center items-center">
+        <h1 class="text-7xl text-center">YOU'RE GOING!</h1>
+        <p class="pt-2">We'll see you at New Memories!</p>
+        <p>862 Parksville Rd, Parksville, NY 12768</p>
     </div>
 
     <script type="module" src="/index.js"></script>
