Added event date to success page.

--- a/src/success.html
+++ b/src/success.html
@@ -16,6 +16,7 @@
     <div class="flex flex-col h-[85vh] justify-center items-center">
         <h1 class="text-7xl text-center">YOU'RE GOING!</h1>
         <p class="pt-2">We'll see you at New Memories!</p>
+        <p>August 31st 2024</p>
         <p>862 Parksville Rd, Parksville, NY 12768</p>
     </div>
 
