Disabled ticket purchasing.

--- a/src/index.html
+++ b/src/index.html
@@ -45,21 +45,9 @@
         <div class="flex flex-col justify-end border h-full rounded-lg border-2 border-[#EEC863]">
             <div class="text-6xl pl-4">GET YOUR TICKET</div>
             <form class="pl-4 pr-4 mt-6 text-2xl">
-                <div class="flex">
-                    <label for="quantity">QUANTITY:</label>
-                    <select name="qty" id="quantity" class="bg-black ml-3 pl-2 border-2 rounded-md border-[#EEC863]">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                    </select>
-                    <div class="ml-auto">x$10.30</div>
-                </div>
                 <div>
-                    <button id="checkout-button" class="w-full bg-[#EEC863] hover:bg-[#E5C160] text-black mt-4 mb-4 pt-2 pb-1 rounded-md">
-                        <div>CHECKOUT</div>
+                    <button id="checkout-button" disabled="true" class="w-full bg-[#776532] text-black mt-4 mb-4 pt-2 pb-1 rounded-md">
+                        <div>EVENT PASSED</div>
                         <div class="hidden">WAIT</div>
                     </button>
                 </div>
