--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         <div class="flex mt-4">
             <div class="h-6 flex mr-4">
                 <img class="h-full mr-1" src="twitch_icon.png">
-                <a class="text-sm" href="https://www.twitch.tv/theegartians">TWTICH</a>
+                <a class="text-sm" href="https://www.twitch.tv/theegartians">TWITCH</a>
             </div>
             <div class="h-6 flex items-center mr-4">
                 <img class="h-full mr-1" src="insta_icon.png">
